# applied-ml-portfolio

./: .gitignore
01-pharma-sentinel/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
01-pharma-sentinel/.github/workflows/: ci-cd.yml
01-pharma-sentinel/infrastructure/: cloudformation.yaml  datadog-dashboard.json  localstack-init.sh
01-pharma-sentinel/src/pharma_sentinel/: __init__.py  config.py
01-pharma-sentinel/tests/: __init__.py  conftest.py  test_api.py  test_classifier.py  test_pipeline.py
02-cloud-genomics/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
02-cloud-genomics/.github/workflows/: deploy.yml
02-cloud-genomics/infrastructure/: cloudformation.yaml  init-db.sql  localstack-init.sh
02-cloud-genomics/src/cloud_genomics/: __init__.py
02-cloud-genomics/tests/: conftest.py  test_api.py  test_variant_classifier.py  test_vcf_processor.py
03-feature-forge/: CLAUDE.md  README.md  pyproject.toml
03-feature-forge/dags/: drift_monitoring_dag.py  feature_pipeline_dag.py
03-feature-forge/sql/feature_queries/: lab_features.sql  patient_features.sql  semi_structured_features.sql
03-feature-forge/sql/schema/: feature_store_tables.sql
03-feature-forge/src/feature_forge/: __init__.py
03-feature-forge/tests/: conftest.py  test_drift.py  test_extractors.py  test_feature_store.py
04-drug-interaction-ml/: CLAUDE.md  README.md  pyproject.toml
04-drug-interaction-ml/dags/: monitoring_dag.py  training_pipeline_dag.py
04-drug-interaction-ml/sql/: drift_analysis.sql  feature_extraction.sql
04-drug-interaction-ml/src/drug_interaction/: __init__.py
04-drug-interaction-ml/step_functions/: training_workflow.json
04-drug-interaction-ml/tests/: conftest.py  test_deployment.py  test_features.py  test_model.py
05-rx-predict/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
05-rx-predict/.github/workflows/: ci-cd.yml
05-rx-predict/benchmarks/: latency_benchmark.py
05-rx-predict/frontend/: app.js  index.html  styles.css
05-rx-predict/monitoring/: prometheus.yml
05-rx-predict/src/rx_predict/: __init__.py
05-rx-predict/tests/: conftest.py  test_api.py  test_cache.py  test_model.py  test_performance.py
06-biomarker-dash/: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
06-biomarker-dash/frontend/: dashboard.js  index.html  styles.css
06-biomarker-dash/scripts/: generate_sample_data.py
06-biomarker-dash/tests/: conftest.py  test_alerts.py  test_anomaly_detector.py  test_streaming.py
07-pharma-data-vault/: CLAUDE.md  README.md  pyproject.toml
07-pharma-data-vault/tests/: conftest.py  test_data_quality.py  test_etl_pipeline.py
08-reg-record/: CLAUDE.md  README.md  pyproject.toml
08-reg-record/sql/ddl/: packages.sql  (+2 more)
08-reg-record/tests/: conftest.py  test_compliance.py  test_pseudo_record.py  test_submission.py
09-cell-vision/: CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
09-cell-vision/scripts/: train_model.py
09-cell-vision/tests/: conftest.py  test_model.py  test_preprocessing.py
10-molecule-gen/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
10-molecule-gen/scripts/: evaluate_generation.py  train_vae.py
10-molecule-gen/tests/: conftest.py  test_chemistry.py  test_generation.py  test_vae.py
11-plant-pathologist/: CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
11-plant-pathologist/frontend/: app.js  index.html  styles.css
11-plant-pathologist/tests/: conftest.py  test_classifier.py  test_preprocessing.py
12-protein-explorer/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
12-protein-explorer/frontend/: index.html  protein.js  styles.css
12-protein-explorer/tests/: conftest.py  test_alignment.py  test_sequence_analyzer.py
13-llm-pharma-assistant/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
13-llm-pharma-assistant/frontend/: chat.js  index.html  styles.css
13-llm-pharma-assistant/tests/: conftest.py  test_api.py  test_guardrails.py  test_retriever.py
14-streaming-pipeline/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
14-streaming-pipeline/infrastructure/: cloudformation.yaml
14-streaming-pipeline/scripts/: generate_load.py
14-streaming-pipeline/tests/: conftest.py  test_kinesis.py  test_processors.py  test_signal_detection.py
15-ab-testing-platform/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
15-ab-testing-platform/frontend/: dashboard.js  index.html  styles.css
15-ab-testing-platform/tests/: conftest.py  test_experiment.py  test_statistical_engine.py  test_traffic_router.py
16-pharma-etl-informatica/: CLAUDE.md  README.md  pyproject.toml
16-pharma-etl-informatica/tests/: conftest.py  test_pipelines.py  test_session.py  test_transformations.py
17-wildlife-classifier/: CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
17-wildlife-classifier/infrastructure/: cloudformation.yaml
17-wildlife-classifier/tests/: conftest.py  test_analytics.py  test_classifier.py
18-recipe-optimizer/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
18-recipe-optimizer/frontend/: app.js  index.html  styles.css
18-recipe-optimizer/tests/: conftest.py  test_nutrition.py  test_optimizer.py
19-pharma-forecaster/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
19-pharma-forecaster/dags/: daily_forecast_dag.py
19-pharma-forecaster/frontend/: dashboard.js  index.html  styles.css
19-pharma-forecaster/infrastructure/: cloudformation.yaml
19-pharma-forecaster/tests/: conftest.py  test_forecasters.py
20-pharma-agents/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
20-pharma-agents/frontend/: agents.js  index.html  styles.css
20-pharma-agents/tests/: conftest.py  test_agents.py  test_orchestrator.py  test_tools.py
21-clinical-trial-eda/: CLAUDE.md  README.md  pyproject.toml
21-clinical-trial-eda/notebooks/: 01_data_generation.ipynb  02_exploratory_analysis.ipynb
21-clinical-trial-eda/tests/: test_data_generator.py  test_stats.py
(+249 files in other folders)
