[project]
name = "cloud-genomics"
version = "1.0.0"
description = "Genomic Variant Classification Service - ML-powered classification of genetic variants deployed on AWS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CloudGenomics Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "boto3>=1.35.0",
    "scikit-learn>=1.6.0",
    "biopython>=1.85",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "ddtrace>=2.18.0",
    "datadog>=0.50.0",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "moto[s3,stepfunctions,kms]>=5.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_genomics"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "RET", "SIM"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
