[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molecule-gen"
version = "0.1.0"
description = "MoleculeGen - AI-powered Drug Molecule Generator using Variational Autoencoders"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Danny", email = "danny@example.com" },
]
keywords = [
    "drug-discovery",
    "generative-chemistry",
    "molecular-generation",
    "variational-autoencoder",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "rdkit-stubs>=0.7",
    "scikit-learn>=1.3.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["molecule_gen"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
