[project]
name = "plant-pathologist"
version = "0.1.0"
description = "Plant Disease Detection system using computer vision and deep learning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Danny" }]
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pillow>=10.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "streamlit>=1.31.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["src/plant_pathologist"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
