[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-rx"
version = "0.1.0"
description = "StreamRx - Real-time Pharmaceutical Event Streaming Pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "StreamRx Team" },
]

dependencies = [
    "boto3>=1.34.0",
    "confluent-kafka>=2.3.0",
    "faust-streaming>=0.11.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.0",
    "pyarrow>=15.0.0",
    "orjson>=3.9.0",
    "prometheus-client>=0.20.0",
    "datadog>=0.49.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "moto[s3,kinesis,dynamodb]>=5.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[project.scripts]
stream-rx-api = "stream_rx.api.main:run_server"
stream-rx-prescriptions = "stream_rx.producers.prescription_producer:main"
stream-rx-adverse = "stream_rx.producers.adverse_event_producer:main"
stream-rx-load = "scripts.generate_load:main"
