[project]
name = "pharma-flow"
version = "1.0.0"
description = "PharmaFlow - Informatica PowerCenter-inspired ETL framework for pharmaceutical data processing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PharmaFlow Team" }]

dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "pandas>=2.1,<3.0",
    "pydantic>=2.5,<3.0",
    "schedule>=1.2,<2.0",
    "great-expectations>=0.18,<1.0",
    "structlog>=24.0,<25.0",
    "lxml>=5.0,<6.0",
    "thefuzz[speedup]>=0.22,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.8,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_flow"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
